i18n using gettext seems ready
git-svn-id: http://svn.code.sf.net/p/oobash/code@4 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -195,13 +195,15 @@
 #    -new functions for registry: __registerAlias, __cleanUpAliases
 #    -deleted message "#"-frame -- better for i18n
 #    -po file:charset=utf-8 now
-#    in process...:
-#    -rewrite of Class.generator function: 
-#     * generated getters: get$Class$Atrribute (to avoid name clashes for the generated functions)
-#     * added missing help for the object methods 
 #    -new function for arg test: __periodCheck (checks if given string contains "." character) called by every constructor
 #    -new i18n package with I18nMessage file, content:I18n.out.message I18n.err.message I18n.help. New private function:__i18nMessage
 #     http://tldp.org/LDP/abs/html/localization.html: $"..." syntax is deprecated --> use of gettext now
+#    still to do ...:
+#    -rewrite of Class.generator function: 
+#     * generated getters: get$Class$Atrribute (to avoid name clashes for the generated functions)
+#     * added missing help for the object methods 
+#    -DependencyCheck function
+#    -man pages for existing code
 
 #################################################################
 # Features:
