--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -186,7 +186,8 @@
 #    -a first really small README.txt file in the docs directory
 #    -changed filesystem structure
 #    -License tag in every file
-# Version:      0.38.6   Date:       28.10.2011, 31.10.2011, 03.11.2011, 07.11.2011, 16.11.2011, 22.11.2011
+# Version:      0.38.6   Date:       28.10.2011, 31.10.2011, 03.11.2011, 07.11.2011, 16.11.2011, 22.11.2011, 24.11.2011
+#    -Italian po file (Thanks to David Costa <david.at.zarel.net>)
 #    -Fixed/modified german po/mo files (i18n)
 #    -Fixed wrong check order in constructor checks + code cleanup 
 #    -Hope for better macos support (can't test), by looking for gnu date/gdate in /opt/local/bin
@@ -205,7 +206,6 @@
 #    -generated getters: get$Class$Atrribute (Class.generator) to avoid name clashes
 #    -define special format for class arrays and simple vars to avoid name clashes
 #    -man pages for existing code
-#    -set "command not found" in some languages (extract from find /usr/share/locale -name bash.mo)
 #    -colors in console
 #    -replace readlink
 #    -smaller __mathConverter
