--- a/0.38.6/locale/it/LC_MESSAGES/oobash.po
+++ b/0.38.6/locale/it/LC_MESSAGES/oobash.po
@@ -70,8 +70,8 @@ msgid " Some Boolean constants:  -Boolean.TRUE -Boolean.FALSE"
 msgstr " Qualche costante Boolean: -Boolean.TRUE -Boolean.FALSE"
 
 #: /home/franka/Bash/oobash/oobash-0.38.5.source:259
-msgid " Available help systems: String.help, File.help, Math.help, System.help, Boolean.help"
-msgstr " Sistemi di aiuto disponibili: String.help, File.help, Math.help, System.help, Boolean.help"
+msgid " Available help systems: String.help, File.help, Math.help, System.help, Boolean.help ..."
+msgstr " Sistemi di aiuto disponibili: String.help, File.help, Math.help, System.help, Boolean.help ..."
 
 #: /home/franka/Bash/oobash/oobash-0.38.5.source:260
 msgid " Usage: Classname.help  methodname(s)|constructorname|constantname or keyword: all"
