__gnudateCheck instead of command -v date
git-svn-id: http://svn.code.sf.net/p/oobash/code@16 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -204,11 +204,11 @@
 #    -added missing help for the object methods in Class.generator function
 #    -better readme file
 #    -integration of __dependencyCheck and "start source"
+#    -__gnudateCheck instead of command -v date
 #    still to do ...:
 #    -man pages for existing code
-#    -__gnudateCheck instead of command -v date
 #    -substitue dirname in __import function with bash
-
+#    -catch System.currentTimeNanos exceptions
 
 #################################################################
 # Features:
