fix for __equalsIgnoreCase, substitue dirname in __import
git-svn-id: http://svn.code.sf.net/p/oobash/code@18 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -205,12 +205,11 @@
 #    -better readme file
 #    -integration of __dependencyCheck and "start source"
 #    -__gnudateCheck instead of command -v date
+#    -fix for __equalsIgnoreCase
+#    -substitue dirname in __import function with bash
 #    still to do ...:
 #    -man pages for existing code
-#    -substitue dirname in __import function with bash
 #    -catch System.currentTimeNanos exceptions
-#    -create ALIASES for logging before sourcing --> speed
-#    - naming like __lookForLoggingPropertiesFile for registry, dependencies... --> avoid name clashes
 
 #################################################################
 # Features:
