catch System.currentTimeNanos exception
git-svn-id: http://svn.code.sf.net/p/oobash/code@20 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -208,9 +208,10 @@
 #    -fix for __equalsIgnoreCase in String
 #    -fix for __length in File
 #    -bash substitution for dirname in __import function
+#    -catch System.currentTimeNanos exceptions
 #    still to do ...:
 #    -man pages for existing code
-#    -catch System.currentTimeNanos exceptions
+#    -substitution for readlink
 
 
 #################################################################
