beginning of man page feature
git-svn-id: http://svn.code.sf.net/p/oobash/code@26 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -209,10 +209,7 @@
 #    -fix for __length in File
 #    -bash substitution for dirname in __import function
 #    -catch System.currentTimeNanos exceptions
-#    still to do ...:
 #    -man pages for existing code
-#    -substitution for readlink
-
 
 #################################################################
 # Features:
@@ -223,4 +220,5 @@
 # Use of bash autocompletion
 # Registry for environment cleanUp
 # i18n
+# man pages
 #################################################################
