man page feature seems ready
git-svn-id: http://svn.code.sf.net/p/oobash/code@31 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.38.6/locale/de/LC_MESSAGES/oobash.po
+++ b/0.38.6/locale/de/LC_MESSAGES/oobash.po
@@ -90,6 +90,10 @@ msgid " Everything ok!"
 msgstr " Alles in Ordnung!"
 
 #: /home/franka/Bash/oobash/oobash-0.38.5.source
+msgid " Could not change MANPATH !"
+msgstr " Konnte MANPATH nicht anpassen"
+
+#: /home/franka/Bash/oobash/oobash-0.38.5.source
 msgid " Please install the missing package(s) to have complete functionality"
 msgstr " Bitte installieren Sie die fehlenden Pakete um volle Funktionalität zu haben."
 
