--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -188,28 +188,25 @@
 #    -License tag in every file
 # Version:      0.38.6 
 #    -Italian po file (Thanks to David Costa <david.at.zarel.net>)
-#    -Fixed/modified german po/mo files (i18n)/po files:charset=utf-8 now
-#    -Fixed wrong check order in constructor checks + code cleanup 
+#    -man pages for existing code
 #    -Hope for better macos support (can't test), by looking for gnu date/gdate in /opt/local/bin
-#    -Dependencies.txt file (all used external commands in this framework)
-#    -replaced dirname command in oobash-0.38.6.source with bash code
 #    -new functions for registry: __registerAlias, __cleanUpAliases
 #    -deleted message "#"-frame -- better for i18n
 #    -new function for arg test: __periodCheck (checks if given string contains "." character) called by every constructor
 #    -new i18n package with I18nMessage file, content:I18n.out.message I18n.err.message I18n.help. New private function:__i18nMessage
+#    -generated getters: get$Class$Attribute (Class.generator) to avoid name clashes
 #     http://tldp.org/LDP/abs/html/localization.html: $"..." syntax is deprecated --> use of gettext now
+#    -better readme file
+#    -__gnudateCheck instead of command -v date
+#    -"decorator" idea in docs/ideas
+#    -added missing help for the object methods in Class.generator function
+#    -Fixed/modified german po/mo files (i18n)/po files:charset=utf-8 now
+#    -Fixed wrong check order in constructor checks + code cleanup 
+#    -Fix for __equalsIgnoreCase in String
+#    -Fix for __length in File
+#    -Dependencies.txt file (all used external commands in this framework)
 #    -moved private registry functions to the private package
 #    -__dependencyCheck,__gnudateCheck are new private functions to check the external commands that are used in this framework
-#    -generated getters: get$Class$Attribute (Class.generator) to avoid name clashes
-#    -added missing help for the object methods in Class.generator function
-#    -better readme file
-#    -integration of __dependencyCheck and "start source"
-#    -__gnudateCheck instead of command -v date
-#    -fix for __equalsIgnoreCase in String
-#    -fix for __length in File
-#    -bash substitution for dirname in __import function
-#    -catch System.currentTimeNanos exceptions
-#    -man pages for existing code
 
 #################################################################
 # Features:
