--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -188,6 +188,7 @@
 #    -License tag in every file
 # Version:      0.38.6 
 #    -Italian po file (Thanks to David Costa <david.at.zarel.net>)
+#    -Possibility to "decorate" your functions
 #    -man pages for existing code
 #    -Hope for better macos support (can't test), by looking for gnu date/gdate in /opt/local/bin
 #    -new functions for registry: __registerAlias, __cleanUpAliases
@@ -218,4 +219,5 @@
 # Registry for environment cleanUp
 # i18n
 # man pages
+# decorators
 #################################################################
