still todo info in changelog
git-svn-id: http://svn.code.sf.net/p/oobash/code@53 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.38.6/docs/Changelog.txt
+++ b/0.38.6/docs/Changelog.txt
@@ -207,6 +207,8 @@
 #    -Fix for __length in File
 #    -Dependencies.txt file (all used external commands in this framework)
 #    -moved private registry functions to the private package
+TODO: export path to oobash
+TODO: file2man 
 
 #################################################################
 # Features:
