--- a/0.39/docs/Changelog.txt
+++ b/0.39/docs/Changelog.txt
@@ -208,6 +208,7 @@
 #    -Fix for __length in File
 #    -Dependencies.txt file (all used external commands in this framework)
 #    -moved private registry functions to the private package
+TODO: filename always oobash.source (with version request by argument or/and always if you execute)
 TODO: export path to oobash
 TODO: file2man 
 TODO: use the exported oopath in file2man and decorator example
