--- a/0.39/docs/Changelog.txt
+++ b/0.39/docs/Changelog.txt
@@ -209,8 +209,11 @@
 #    -Dependencies.txt file (all used external commands in this framework)
 #    -moved private registry functions to the private package
 #    -oobash path is exported with the name __OODIR__
-TODO: file2man 
+TODO: file2man  --> into the Generator.oobash file --> grep into Dependencies array
 TODO: use the exported oopath in file2man example
+TODO: NotInPath Exceptions for sort and tr
+TODO: very often something like "throw WrongNumberOfArgumentsException" + the help text
+TODO: getClass --> Returns: The Class object -->  The Class namestring or something like that
 
 #################################################################
 # Features:
