--- a/0.39/docs/Changelog.txt
+++ b/0.39/docs/Changelog.txt
@@ -209,9 +209,10 @@
 #    -Dependencies.txt file (all used external commands in this framework)
 #    -moved private registry functions to the private package
 #    -oobash path is exported with the name __OODIR__
+#    -added NotInPath Exceptions for sort and tr (toString and Class.generator)
+#    -Fix in I18n.help
 TODO: file2man  --> into the Generator.oobash file --> grep into Dependencies array
 TODO: use the exported oopath in file2man example
-TODO: NotInPath Exceptions for sort and tr
 TODO: use of IllegalArgumentException + description (where to use in sources!) description example: IllegalArgumentException: wrong number of arguments
 
 #################################################################
