small changes + again added exceptions to the help util
git-svn-id: http://svn.code.sf.net/p/oobash/code@107 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39/docs/Changelog.txt
+++ b/0.39/docs/Changelog.txt
@@ -205,9 +205,10 @@
 #    -deleted all method comments -- no time to maintain comments and help and no comments are better than wrong ones
 #    -many fixes
 #    -deleted all method comments -- no time to maintain comments and help and no comments are better than wrong ones
-#    -style corection
+#    -style corections
 
 TODO: add IllegalArgumentException to help 
+TODO: Math add Exceptions where necessary
 TODO: recreate man pages
 
 #################################################################
