more consistent exceptions
git-svn-id: http://svn.code.sf.net/p/oobash/code@112 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39/docs/Changelog.txt
+++ b/0.39/docs/Changelog.txt
@@ -191,7 +191,7 @@
 #    -Possibility to "decorate" your functions (@calling @timestamp @deprecated)
 #     with almost pythonic look ;-) (see the decorator.sh script docs/examples)
 #    -some man pages
-#    -Hope for better macos support (can't test), by looking for gnu date/gdate in /opt/local/bin
+#    -hope for better macos support (can't test), by looking for gnu date/gdate in /opt/local/bin
 #    -new functions for registry: __registerAlias, __cleanUpAliases
 #    -new function for arg test: __periodCheck (checks if given string contains "." character) called by every constructor
 #    -new i18n package with I18nMessage file, content:I18n.out.message I18n.err.message I18n.help. New private function:__i18nMessage
@@ -206,6 +206,7 @@
 #    -many fixes
 #    -deleted all method comments -- no time to maintain comments and help and no comments are better than wrong ones
 #    -style corections
+#    -more consistent exceptions
 
 TODO: add IllegalArgumentException to help 
 TODO: Math add Exceptions where necessary
