more consistent exceptions
git-svn-id: http://svn.code.sf.net/p/oobash/code@113 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39/docs/Changelog.txt
+++ b/0.39/docs/Changelog.txt
@@ -206,9 +206,8 @@
 #    -many fixes
 #    -deleted all method comments -- no time to maintain comments and help and no comments are better than wrong ones
 #    -style corections
-#    -more consistent exceptions
+#    -more consistent exceptions -> special return values for different exceptions
 
-TODO: add IllegalArgumentException to help 
 TODO: Math add Exceptions where necessary
 TODO: recreate man pages
 
