Math exceptions + some fixes - still missing help doc
git-svn-id: http://svn.code.sf.net/p/oobash/code@120 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/0.39/docs/Changelog.txt
+++ b/0.39/docs/Changelog.txt
@@ -202,13 +202,11 @@
 #    -__gnudateCheck instead of command -v date
 #    -Dependencies.txt file (all used external commands in this framework) and Version.txt
 #    -oobash path is exported with the name __OODIR__
-#    -deleted all method comments -- no time to maintain comments and help and no comments are better than wrong ones
 #    -many fixes
 #    -deleted all method comments -- no time to maintain comments and help and no comments are better than wrong ones
 #    -style corections
 #    -more consistent exceptions -> special return values for different exceptions
-
-TODO: Math add Exceptions where necessary
+TODO: Math help --> documentation of new exceptions
 TODO: recreate man pages
 
 #################################################################
