--- a/0.39.1/docs/Changelog.txt
+++ b/0.39.1/docs/Changelog.txt
@@ -208,6 +208,7 @@
 #    -more consistent exceptions -> special return values for different exceptions
 # Version:      0.39.1
 #    -added stacktrace
+#    -added File: append getText setText
 
 #################################################################
 # Features:
